--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "marked": "^2.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
+    "@types/marked": "^2.0.4",
     "@types/node": "^16.3.1",
     "@types/shelljs": "^0.8.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
