--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
