--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "highlight.js": "^10.7.3",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
