--- a/content/posts/post_manifest.json
+++ b/content/posts/post_manifest.json
@@ -1,11 +1,11 @@
 {
     "posts": [
-        { "id": "1627749450585", "title": "What is an Image?", "route": "what-is-an-image", "tags": ["Image Processing", "C++"] },
-        { "id": "", "title": "What is an image? - RGB edition", "route": "what-is-an-image-rgb", "tags": ["Image Processing", "C++"] },
-        { "id": "", "title": "", "route": "", "tags": [] },
-        { "id": "", "title": "", "route": "", "tags": [] },
-        { "id": "", "title": "", "route": "", "tags": [] },
-        { "id": "", "title": "", "route": "", "tags": [] },
-        { "id": "", "title": "", "route": "", "tags": [] }
+        { "number": "[001]", "id": "1628349101037", "title": "What is an Image?", "route": "what-is-an-image", "tags": ["Image Processing", "C++"] },
+        { "number": "[]", "id": "", "title": "What is an image? - RGB edition", "route": "what-is-an-image-rgb", "tags": ["Image Processing", "C++"] },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": [] },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": [] },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": [] },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": [] },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": [] }
     ]
 }
