--- a/static_bv_client/package.json
+++ b/static_bv_client/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
+    "@types/marked": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "highlight.js": "^10.7.3",
+    "marked": "^2.1.3",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
