--- a/vs/BlogScratchPad/Image/Image.vcxproj
+++ b/vs/BlogScratchPad/Image/Image.vcxproj
@@ -150,8 +150,10 @@
   <ItemGroup>
     <ClInclude Include="..\util\libimage\gray.hpp" />
     <ClInclude Include="..\util\libimage\libimage.hpp" />
+    <ClInclude Include="..\util\libimage\rgba.hpp" />
     <ClInclude Include="..\util\win32_leak_check.h" />
     <ClInclude Include="demos\post001.hpp" />
+    <ClInclude Include="demos\planar.hpp" />
     <ClInclude Include="demos\post002.hpp" />
     <ClInclude Include="demos\transparent_background.hpp" />
   </ItemGroup>
