--- a/static_bv_client/public/content/posts/post_manifest.json
+++ b/static_bv_client/public/content/posts/post_manifest.json
@@ -3,7 +3,7 @@
         { "number": "[001]", "id": "1628558232358", "title": "What is an Image?", "route": "what-is-an-image", "tags": ["Image Processing", "C++"], "filename": "[001][What is an Image].md" },
         { "number": "[002]", "id": "1629579790240", "title": "What is an image? - RGB edition", "route": "what-is-an-image-rgb", "tags": ["Image Processing", "C++"], "filename": "[002][What is an image RGB].md" },
         { "number": "[003]", "id": "1631976582706", "title": "Reading and writing images", "route": "read-write-image", "tags": ["Image Processing", "C++", "Libraries"], "filename": "[003][Reading and writing images].md" },
-        { "number": "[]", "id": "", "title": "", "route": "", "tags": [], "filename": "" },
+        { "number": "[]", "id": "", "title": "", "route": "", "tags": ["C++", "STL", "Algorithms"], "filename": "" },
         { "number": "[]", "id": "", "title": "", "route": "", "tags": [], "filename": "" },
         { "number": "[]", "id": "", "title": "", "route": "", "tags": [], "filename": "" },
         { "number": "[]", "id": "", "title": "", "route": "", "tags": [], "filename": "" }
