--- a/vs/BlogScratchPad/Image/Image.vcxproj
+++ b/vs/BlogScratchPad/Image/Image.vcxproj
@@ -152,12 +152,14 @@
     <ClInclude Include="..\util\libimage\gray.hpp" />
     <ClInclude Include="..\util\libimage\libimage.hpp" />
     <ClInclude Include="..\util\libimage\rgba.hpp" />
+    <ClInclude Include="..\util\stopwatch.hpp" />
     <ClInclude Include="..\util\win32_leak_check.h" />
     <ClInclude Include="demos\post001.hpp" />
     <ClInclude Include="demos\planar.hpp" />
     <ClInclude Include="demos\post002.hpp" />
     <ClInclude Include="demos\post003\image.hpp" />
     <ClInclude Include="demos\post003\post003.hpp" />
+    <ClInclude Include="demos\post004\algorithm_example.hpp" />
     <ClInclude Include="demos\transparent_background.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
