--- a/vs/BlogScratchPad/SDL2Demo/SDL2Demo.vcxproj
+++ b/vs/BlogScratchPad/SDL2Demo/SDL2Demo.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <ClCompile Include="sdl_main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\util\stopwatch.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
