--- a/vs/BlogScratchPad/SDL2Demo/SDL2Demo.vcxproj
+++ b/vs/BlogScratchPad/SDL2Demo/SDL2Demo.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\util\stopwatch.hpp" />
+    <ClInclude Include="..\util\win32_leak_check.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
