--- a/static_client/package.json
+++ b/static_client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/marked": "^5.0.2",
     "bootstrap": "^5.3.2",
+    "highlight.js": "^11.8.0",
+    "marked": "^9.0.3",
     "material-icons": "^1.13.11",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
